Add files decorator, webade resources
